fixed footer link, so it aligns properly with other text

--- a/fedoracommunity.org/static/css/fedoracommunity960.css
+++ b/fedoracommunity.org/static/css/fedoracommunity960.css
@@ -152,6 +152,7 @@ ul, ol {
 
 #footer li.first {
 	border-left:medium none;
+    padding-left: 1px;
 }
 
 #footer li {
